fixed text-align in mobile

--- a/frontend-next-migration/src/shared/ui/WikiContentWithSidebar/ui/WikiContentWithSideBar.module.scss
+++ b/frontend-next-migration/src/shared/ui/WikiContentWithSidebar/ui/WikiContentWithSideBar.module.scss
@@ -23,6 +23,10 @@
   overflow: visible; // Ensure this is set
 }
 
+.mainContent.isMobile {
+  display:block;
+}
+
 .navbarSide {
   position: sticky;
   top: 9.5rem;
